feat: Implement UUID-based registry system with global script management
MAJOR RESTRUCTURE: Complete LuaEnv System Modernization

## Architecture Changes
- NEW: UUID-based installation registry system in %USERPROFILE%\.luaenv
- NEW: Global script installation to %USERPROFILE%\.luaenv\bin
- NEW: Complete environment isolation with per-installation package trees
- RESTRUCTURE: Moved all backend components to dedicated backend/ directory
- NEW: F# CLI and GUI applications in cli/ directory

## Core Features Implemented

### Registry Management (registry.py)
- UUID-based installation tracking with centralized registry.json
- User-friendly alias system for installations
- Installation status tracking (active/broken/removed)
- Default installation management
- Complete CLI interface with commands:
  - install-scripts, check-scripts, scripts-path
  - list, status, remove, validate, cleanup
  - alias management and default selection

### Enhanced Installation System (setup_lua.py)
- Registry-integrated installation creation
- Support for multiple concurrent installations
- Automatic UUID generation and directory structure
- Build type support: static/dll x release/debug
- Comprehensive testing with official Lua test suite
- Environment isolation with per-installation LuaRocks trees

### Global Script Management
- use-lua.ps1: Registry-aware environment activation
  - Installation resolution by UUID/alias/default
  - Visual Studio Developer Shell integration with directory preservation
  - Session-only environment configuration
  - Isolated LuaRocks package tree setup
- setenv.ps1: Standalone Visual Studio environment setup
- luaenv.ps1: Global registry management wrapper

## Directory Structure Modernization
```
%USERPROFILE%\.luaenv\                    # Central user directory
├── bin\                                  # Global scripts
├── registry.json                         # Installation registry
├── installations\{uuid}\                 # Individual installations
├── e

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 
 # Python files should have LF line endings (Python convention)
 *.py text eol=lf
+*.fs text eol=crlf
 
 # Text files should have LF line endings (cross-platform)
 *.txt text eol=lf
