feat: Complete CLI refactoring and installation system overhaul
### Major Changes:

**CLI Refactoring (COMPLETED):**
- ✅ Removed legacy luaenv.ps1 script conflicts
- ✅ Implemented robust argument parsing with safety validation
- ✅ Added context-specific help (--install --help, --uninstall --help)
- ✅ Created complete Argu library example (Program_Argu_Example.fs)
- ✅ All CLI commands tested and verified working

**Installation System:**
- 🆕 Added setup.ps1: Complete bootstrap with embedded Python download
- 🆕 Added install.py: Full automation with embedded Python integration
- ✅ Fixed install.py argument handling and reset behavior
- ✅ All documented command line arguments properly implemented

**Backend Enhancements:**
- ✅ Enhanced registry.py with JSON backend configuration
- ✅ Improved error handling and status reporting across all scripts
- ✅ Added backend/__init__.py for proper Python module structure

**Build System:**
- 🆕 Added build_cli.ps1: Automated F# CLI build script
- ✅ Updated .gitignore for proper file exclusions
- ✅ Cleaned up backup files and legacy references

**Documentation:**
- 📋 Moved instruction files to ./sdb (private development docs)
- ✅ Updated TODO.md with current project status

### Next Phase Ready:
Ready for Phase 1 registry inspection commands (list, status, versions)
CLI foundation complete for command expansion

### Status:
All components tested and verified working. System provides complete
self-contained environment with embedded Python and production-ready CLI.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,17 @@ backend/tests/__pycache__/
 backend/__pycache__/
 backend/version_cache.json
 
+sdb
+
+.copilot
+
+# Embeded Python files
+python
+.pythonenv
+
+
 # F# / .NET build artifacts
+publish/
 cli/*/bin/
 cli/*/obj/
 cli/.fake/
@@ -73,3 +83,4 @@ bld/
 activate-*.ps1
 .lua-version
 
+.fake
