--- a/cli/LuaEnv.CLI/LuaEnv.CLI.fsproj
+++ b/cli/LuaEnv.CLI/LuaEnv.CLI.fsproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Argu" Version="6.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="Program.fs" />
   </ItemGroup>
 
