--- a/cli/LuaEnv.Core/LuaEnv.Core.fsproj
+++ b/cli/LuaEnv.Core/LuaEnv.Core.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="RegistryAccess.fs" />
     <Compile Include="Types.fs" />
   </ItemGroup>
 
